--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
     </style>
 </head>
 <body>
-   <audio autoplay loop muted>
-    <source src="audio/bekburner.mp3" type="audio/mpeg">
+   <audio >
+    <source src="bekburner.mp3" type="audio">
 </audio>
     <!-- FLOATING STICKERS -->
     <div class="sticker">⭐</div>
