--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
     
     <!-- AUDIO ELEMENT -->
     <audio id="backgroundMusic" loop>
-        <source src="bekburner.mp3" type="audio/mpeg">
+        <source src="jokowi-kaget.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
@@ -1107,8 +1107,8 @@
                 <div class="memory-photo">
                     <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Belajar bareng">
                 </div>
-                <div class="memory-caption">Belajar bareng buat ujian. Teamwork makes the dream work!</div>
-                <div class="memory-date">5 Oktober 2024</div>
+                <div class="memory-caption">ART PEOPLE</div>
+                <div class="memory-date">KAPANPUN</div>
             </div>
             <div class="reactions">
                 <button class="reaction-btn" onclick="addReaction(this)">❤️ <span class="reaction-count">28</span></button>
