--- a/index.html
+++ b/index.html
@@ -1124,8 +1124,8 @@
                 <div class="memory-photo">
                     <img src="https://images.unsplash.com/photo-1511882150382-421056c89033?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Main game bareng">
                 </div>
-                <div class="memory-caption">Main game bareng pas jam istirahat wkwk</div>
-                <div class="memory-date">12 Oktober 2024</div>
+                <div class="memory-caption">Sparing Mobile Legends</div>
+                <div class="memory-date">25 November 2025</div>
             </div>
             <div class="reactions">
                 <button class="reaction-btn" onclick="addReaction(this)">❤️ <span class="reaction-count">19</span></button>
@@ -1213,7 +1213,7 @@
                 <div class="quote-category">Friendship</div>
                 <div class="quote-polaroid" onclick="openModal('quote1')">
                     <p class="quote-text">"Terima kasih atas semua kenangan indah. Kalian adalah keluarga kedua aku! Semoga kita tetap berteman selamanya."</p>
-                    <p class="quote-author">- Sarah Wijaya</p>
+                    <p class="quote-author">- amba</p>
                     <div class="quote-date">Posted: 15 Maret 2025</div>
                 </div>
                 <div class="reactions">
@@ -1226,7 +1226,7 @@
                 <div class="quote-category">Memories</div>
                 <div class="quote-polaroid" onclick="openModal('quote2')">
                     <p class="quote-text">"Gak nyangka 3 tahun udah berlalu. Dari yang gak kenal jadi keluarga. Miss you all already! 😭"</p>
-                    <p class="quote-author">- Budi Santoso</p>
+                    <p class="quote-author">- amba</p>
                     <div class="quote-date">Posted: 22 Maret 2025</div>
                 </div>
                 <div class="reactions">
@@ -1239,7 +1239,7 @@
                 <div class="quote-category">Love</div>
                 <div class="quote-polaroid" onclick="openModal('quote3')">
                     <p class="quote-text">"Kelas paling gokil dan seru sepanjang masa. Love you guys! Thank you for all the laughter and support."</p>
-                    <p class="quote-author">- Dian Permata</p>
+                    <p class="quote-author">- amba</p>
                     <div class="quote-date">Posted: 30 Maret 2025</div>
                 </div>
                 <div class="reactions">
@@ -1252,7 +1252,7 @@
                 <div class="quote-category">Inspiration</div>
                 <div class="quote-polaroid" onclick="openModal('quote4')">
                     <p class="quote-text">"Dari yang gak kenal jadi keluarga. Ini kelas terbaik! Semoga kita semua sukses dan tetap keep in touch ya!"</p>
-                    <p class="quote-author">- Andi Pratama</p>
+                    <p class="quote-author">- amba</p>
                     <div class="quote-date">Posted: 5 April 2025</div>
                 </div>
                 <div class="reactions">
@@ -1265,7 +1265,7 @@
                 <div class="quote-category">Future</div>
                 <div class="quote-polaroid" onclick="openModal('quote5')">
                     <p class="quote-text">"Semoga kita semua sukses dan tetap keep in touch ya! Pengalaman yang gak akan pernah terlupakan."</p>
-                    <p class="quote-author">- Rina Sari</p>
+                    <p class="quote-author">- amba</p>
                     <div class="quote-date">Posted: 12 April 2025</div>
                 </div>
                 <div class="reactions">
@@ -1278,7 +1278,7 @@
                 <div class="quote-category">Heartfelt</div>
                 <div class="quote-polaroid" onclick="openModal('quote6')">
                     <p class="quote-text">"Pengalaman yang gak akan pernah terlupakan. Forever in my heart! ❤️ Thank you for being amazing friends."</p>
-                    <p class="quote-author">- Reza Gunawan</p>
+                    <p class="quote-author">- amba</p>
                     <div class="quote-date">Posted: 18 April 2025</div>
                 </div>
                 <div class="reactions">
@@ -1353,6 +1353,21 @@
                 </div>
             </div>
 
+ <div class="team-card"> 
+                <div class="team-category">STARBOY</div>
+                <div class="team-polaroid" onclick="openModal('team7')">
+                    <div class="team-photo">
+                        <img src="adit.jpg" alt="ADIT">
+                    </div>
+                    <div class="team-caption">ADIT</div>
+                    <div class="team-date">PEMERAN UTAMA</div>
+                </div>
+                <div class="reactions">
+                    <button class="reaction-btn" onclick="addReaction(this)">❤️ <span class="reaction-count">30</span></button>
+                    <button class="reaction-btn" onclick="addReaction(this)">🤝 <span class="reaction-count">24</span></button>
+                </div>
+            </div>
+
             <div class="team-card">
                 <div class="team-category">SEPUR</div>
                 <div class="team-polaroid" onclick="openModal('team5')">
@@ -1372,7 +1387,7 @@
                 <div class="team-category">RAPPER JAWIR</div>
                 <div class="team-polaroid" onclick="openModal('team6')">
                     <div class="team-photo">
-                        <img src="AWANK.jpg" alt="AWANK">
+                        <img src="repper.jpg" alt="AWANK">
                     </div>
                     <div class="team-caption">AWANK</div>
                     <div class="team-date">NPC</div>
@@ -1580,20 +1595,55 @@
                 tags: ['Memories', 'Family', 'Emotional']
             },
 
-            // Team tab data
+            // Team tab data - TAMBAHKAN DATA INI
             'team1': {
                 image: 'https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80',
                 title: 'MAS FATHIRR - Ketua Kelas',
                 date: 'Leader since 2024',
-                description: 'MAS FATHIRR adalah pemimpin yang inspiratif dan penuh dedikasi. Dengan visi yang jelas dan kemampuan memimpin yang luar biasa, dia berhasil membawa kelas kita menjadi yang terbaik. Selalu siap membantu dan memberikan solusi untuk setiap masalah.',
+                description: 'MAS FATHIRR adalah pemimpin yang inspiratif dan penuh dedikasi. Dengan visi yang jelas dan kemampuan memimpin yang luar biasa, dia berhasil membawa kelas kita menjadi yang terbaik. Selalu siap membantu dan memberikan solusi untuk setiap masalah. Skill khusus: Leadership, Public Speaking, Problem Solving.',
                 tags: ['Leader', 'Visionary', 'Problem Solver']
             },
             'team2': {
                 image: 'https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80',
                 title: 'MAS HAQI - Wakil Ketua',
                 date: 'Vice Leader since 2024',
-                description: 'MAS HAQI adalah partner yang sempurna untuk ketua kelas. Dengan kemampuan organisasi yang luar biasa dan perhatian terhadap detail, dia memastikan segala sesuatu berjalan dengan lancar. Selalu menjadi penengah dalam setiap diskusi.',
+                description: 'MAS HAQI adalah partner yang sempurna untuk ketua kelas. Dengan kemampuan organisasi yang luar biasa dan perhatian terhadap detail, dia memastikan segala sesuatu berjalan dengan lancar. Selalu menjadi penengah dalam setiap diskusi. Skill: Organization, Time Management, Conflict Resolution.',
                 tags: ['Organizer', 'Mediator', 'Detail-Oriented']
+            },
+            'team3': {
+                image: 'https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80',
+                title: 'MBA OKTA - Sekretaris',
+                date: 'Secretary since 2024',
+                description: 'MBA OKTA adalah sekretaris yang sangat terorganisir dan efisien. Catatan dan dokumentasinya selalu rapi dan lengkap. Dia memastikan semua informasi penting tersampaikan dengan baik ke seluruh anggota kelas. Skill: Documentation, Communication, Administration.',
+                tags: ['Secretary', 'Organized', 'Communicative']
+            },
+            'team4': {
+                image: 'https://images.unsplash.com/photo-1534751516642-a1af1ef26a56?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80',
+                title: 'MBA ERINE - Bendahara',
+                date: 'Treasurer since 2024',
+                description: 'MBA ERINE mengelola keuangan kelas dengan sangat profesional dan transparan. Laporan keuangannya detail dan mudah dipahami. Selalu memberikan saran yang bijak dalam pengelolaan dana kelas. Skill: Financial Management, Transparency, Budgeting.',
+                tags: ['Treasurer', 'Financial', 'Trustworthy']
+            },
+            'team5': {
+                image: 'https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80',
+                title: 'FAREL DWI - Creative Director',
+                date: 'Member since 2024',
+                description: 'FAREL DWI adalah kreator yang penuh dengan ide-ide segar dan inovatif. Desain-desainnya selalu memukau dan memberikan warna baru untuk kelas kita. Skill: Graphic Design, Creative Thinking, Innovation.',
+                tags: ['Designer', 'Creative', 'Innovative']
+            },
+            'team6': {
+                image: 'repper.jpg',
+                title: 'AWANK - Rapper Jawir',
+                date: 'Entertainer since 2024',
+                description: 'AWANK adalah penghibur kelas dengan bakat rap yang unik. Gaya bicaranya yang "medok" selalu menghibur dan membuat suasana kelas menjadi hidup. Meski terlihat santai, dia sangat peduli dengan teman-temannya. Skill: Entertainment, Rap, Socializing.',
+                tags: ['Entertainer', 'Rapper', 'Friendly']
+            },
+            'team7': {
+                image: 'adit.jpg',
+                title: 'ADIT - Starboy',
+                date: 'Main Character since 2024',
+                description: 'ADIT adalah pemeran utama dengan karisma yang tinggi. Selalu menjadi pusat perhatian dengan gaya dan kepribadiannya yang menarik. Meski terlihat cool, dia adalah teman yang setia dan selalu siap membantu. Skill: Leadership, Charisma, Problem Solving.',
+                tags: ['Starboy', 'Charismatic', 'Leader']
             }
         };
 
@@ -1649,6 +1699,7 @@
                 document.body.style.overflow = 'hidden';
                 return;
             }
+            
             
             const modalImage = document.getElementById('modalImage');
             modalImage.innerHTML = '';
