--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
     
     <!-- AUDIO ELEMENT -->
     <audio id="backgroundMusic" loop>
-        <source src="jokowi-kaget.mp3" type="audio/mpeg">
+        <source src="bergema.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
