--- a/index.html
+++ b/index.html
@@ -1007,9 +1007,9 @@
             <div class="memory-category">Events outside of class</div>
             <div class="polaroid" onclick="openModal('trip1')">
                 <div class="memory-photo">
-                    <img src="tes1.jpg" alt="Events outside of class">
+                    <img src="zen.jpg" alt="Events outside of class">
                 </div>
-                <div class="memory-caption">Graphic design class to the moseum</div>
+                <div class="memory-caption">MOSEUM ZEN 1</div>
                 <div class="memory-date">1 Desember 2025</div>
             </div>
             <div class="reactions">
@@ -1433,13 +1433,13 @@
             </div>
 
             <div class="team-card">
-                <div class="team-category">Coder</div>
+                <div class="team-category">Hitam</div>
                 <div class="team-polaroid" onclick="openModal('team10')">
                     <div class="team-photo">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" alt="RIZKI">
+                        <img src="SAYYID.jpg" alt="Sayyid Ardyan">
                     </div>
-                    <div class="team-caption">RIZKI</div>
-                    <div class="team-date">Web Designer</div>
+                    <div class="team-caption">SAYYID EGILUY</div>
+                    <div class="team-date">OOTD FULL HITAM LEGAM</div>
                 </div>
                 <div class="reactions">
                     <button class="reaction-btn" onclick="addReaction(this)">❤️ <span class="reaction-count">35</span></button>
@@ -1906,14 +1906,14 @@
             <button class="modal-close" onclick="closeModal()">✕</button>
             <div class="modal-image" id="modalImage"></div>
             <div class="modal-body">
-                <h2 class="modal-title" id="modalTitle">FIRST EVENT OUTSIDE</h2>
+                <h2 class="modal-title" id="modalTitle">Graphic Desain to Zen1</h2>
                 <p class="modal-date" id="modalDate">1 Desember 2025</p>
                 <p class="modal-description" id="modalDescription">
                     NANTI KITA BIKIN PADA SAAT SUDAH KUNJUNGAN. ❤️
                 </p>
                 <div class="modal-tags">
-                    <span class="tag">Field Trip</span>
-                    <span class="tag">Bandung</span>
+                    <span class="tag">Moseum Trip</span>
+                    <span class="tag">Jakarta</span>
                     <span class="tag">Unforgettable</span>
                 </div>
                 <div class="modal-reactions">
@@ -1936,7 +1936,7 @@
 
     <!-- FOOTER -->
     <div class="footer">
-        <p>Made with <span class="footer-heart">❤️</span> By Class Graphic Design</p>
+         <p>Created By <span class="footer-heart">❤️</span> <a href="https://www.instagram.com/alfdffaa?igsh=ejI4ZWMxMmhpb2Jw" target="_blank" rel="noopener noreferrer" class="ig-link">@alfdffaa</a></p>
         <p style="margin-top: 10px; font-size: 14px;">© SEMOGA ORANG ORANG NYA GA ADA YANG SLEK</p>
     </div>
 
@@ -1993,11 +1993,11 @@
         const memoryData = {
             // Home tab memories
             'trip1': {
-                image: 'tes1.jpg',
-                title: 'FIRST TIME EVENTS OUTSIDE',
+                image: 'zen1.jpg',
+                title: 'Graphic Design To ZEN 1 Moseum',
                 date: '1 Desember 2025',
-                description: 'NANTI KITA ISI KETIKA SUDAH KUNJUNGAN. ❤️',
-                tags: ['Field Trip', 'Bandung', 'Unforgettable']
+                description: 'Deskripsinya apa yaaaaaa??????? ❤️',
+                tags: ['Moseum Trip', 'Jakarta', 'Unforgettable']
             },
             'party1': {
                 image: 'tes1.jpg',
@@ -2161,11 +2161,11 @@
                 tags: ['PES', 'NPC']
             },
             'team10': {
-                image: 'https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80',
-                title: 'RIZKI - Web Designer',
-                date: 'Member since 2024',
-                description: 'RIZKI adalah web designer dengan kemampuan coding yang solid. Desain websitenya selalu user-friendly dan estetik. Skill: Web Design, UI/UX, Frontend Development.',
-                tags: ['Web Designer', 'Coder', 'UI/UX']
+                image: 'SAYYID.jpg',
+                title: 'Sayyid Ardyan- Hitam',
+                date: 'Member Suki since 2025',
+                description: 'Sayyid egiluy',
+                tags: ['Black', 'Coder', 'UI/UX']
             },
             // Tambahkan data untuk anggota lainnya hingga 35
             // Untuk menghemat ruang, saya akan menambahkan data placeholder
